# mtgctl

./: .gitignore  ARCHETYPE_GUIDE.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODO.md  board_plans.txt  config.toml  deck_names.txt  definitions.md  legacy_challenge_top8s.csv  mtgctl.db  pilegen-plan.md  pilegen-review.md  pilegen-rules-spec.md  pilegen-todo.org  show_available_decks.py
.claude/: settings.local.json
.claude/commands/: legacy-challenge-stats.md
definitions/: 8-cast.toml  affinity.toml  aggro.toml  beanstalk.toml  cephalid-breakfast.toml  cloudpost.toml  combo-elves.toml  control.toml  coveted-jewel.toml  cradle-control.toml  death-and-taxes.toml  depths.toml  doomsday.toml  dredge.toml  energy.toml  goblins.toml  hogaak.toml  infect.toml  initiative.toml  lands.toml  landstill.toml  loam-pox.toml  mardu-energy.toml  maverick.toml  merfolk.toml  midrange.toml  miracles.toml  mono-black-helm.toml  mystic-forge.toml  nadu.toml  necrodominance.toml  nic-fit.toml  ninjas.toml  omni-tell.toml  oops-all-spells.toml  other.toml  painter.toml  pilegen.toml  pox.toml  reanimator.toml  (+8 more)
src/: deck.rs  game.rs  html_stats.rs  league.rs  main.rs  pilegen.rs
src/db/: mod.rs  models.rs  schema.rs
src/pilegen/: card_defs.rs  catalog.rs  display.rs  effects.rs  mod.rs  predicates.rs  strategy.rs  tests.rs  triggers.rs
