[package]
name = "mtgctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"